--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ h1{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+p{
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
 a{
     text-decoration: none;
     font-size: 1rem;
